tests/languages/cangjie/snapshots/locals.snap
---
source: tests/support/mod.rs
assertion_line: 81
expression: captures
---
- name: local.scope
  line: 1
  column: 1
  text: "package com.example.main\n\nimport std.io.*\n\nclass MainClass {\n    var name: String\n    static var count: Int64 = 0\n\n    public init(name: String) {\n        this.name = name\n        count += 1\n    }\n\n    public func greet(): String {\n        return \"Hello, ${name}!\"\n    }\n\n    public func getName(): String {\n        return name\n    }\n\n    static func getCount(): Int64 {\n        return count\n    }\n}\n\nmain() {\n    let instance = MainClass(\"World\")\n    println(instance.greet())\n    println(\"Total instances: ${MainClass.getCount()}\")\n}\n\nfunc helper(): Bool {\n    return true\n}\n\nstruct Point {\n    var x: Float64\n    var y: Float64\n\n    public init(x: Float64, y: Float64) {\n        this.x = x\n        this.y = y\n    }\n\n    public func distance(): Float64 {\n        return (x ** 2.0 + y ** 2.0) ** 0.5\n    }\n\n    mut func translate(dx: Float64, dy: Float64): Unit {\n        x += dx\n        y += dy\n    }\n}\n\ninterface Drawable {\n    func draw(): Unit\n}\n\nenum Color {\n    | Red\n    | Green\n    | Blue\n    | Custom(Float64, Float64, Float64)\n}\n\nextend Point <: Drawable {\n    public func draw(): Unit {\n        println(\"Point at (${x}, ${y})\")\n    }\n}\n\nclass Circle <: Point {\n    var radius: Float64\n\n    public init(x: Float64, y: Float64, radius: Float64) {\n        super.init(x, y)\n        this.radius = radius\n    }\n\n    public override func distance(): Float64 {\n        return radius\n    }\n}\n"
- name: local.reference
  line: 1
  column: 9
  text: com
- name: local.reference
  line: 1
  column: 13
  text: example
- name: local.reference
  line: 1
  column: 21
  text: main
- name: local.reference
  line: 3
  column: 8
  text: std
- name: local.reference
  line: 3
  column: 12
  text: io
- name: local.scope
  line: 5
  column: 1
  text: "class MainClass {\n    var name: String\n    static var count: Int64 = 0\n\n    public init(name: String) {\n        this.name = name\n        count += 1\n    }\n\n    public func greet(): String {\n        return \"Hello, ${name}!\"\n    }\n\n    public func getName(): String {\n        return name\n    }\n\n    static func getCount(): Int64 {\n        return count\n    }\n}"
- name: local.definition
  line: 5
  column: 7
  text: MainClass
- name: local.definition
  line: 6
  column: 9
  text: name
- name: local.definition
  line: 7
  column: 16
  text: count
- name: local.scope
  line: 9
  column: 5
  text: "public init(name: String) {\n        this.name = name\n        count += 1\n    }"
- name: local.definition
  line: 9
  column: 17
  text: name
- name: local.reference
  line: 9
  column: 17
  text: name
- name: local.scope
  line: 9
  column: 31
  text: "{\n        this.name = name\n        count += 1\n    }"
- name: local.reference
  line: 10
  column: 14
  text: name
- name: local.reference
  line: 10
  column: 21
  text: name
- name: local.reference
  line: 11
  column: 9
  text: count
- name: local.scope
  line: 14
  column: 5
  text: "public func greet(): String {\n        return \"Hello, ${name}!\"\n    }"
- name: local.definition
  line: 14
  column: 17
  text: greet
- name: local.scope
  line: 14
  column: 33
  text: "{\n        return \"Hello, ${name}!\"\n    }"
- name: local.reference
  line: 15
  column: 26
  text: name
- name: local.scope
  line: 18
  column: 5
  text: "public func getName(): String {\n        return name\n    }"
- name: local.definition
  line: 18
  column: 17
  text: getName
- name: local.scope
  line: 18
  column: 35
  text: "{\n        return name\n    }"
- name: local.reference
  line: 19
  column: 16
  text: name
- name: local.scope
  line: 22
  column: 5
  text: "static func getCount(): Int64 {\n        return count\n    }"
- name: local.definition
  line: 22
  column: 17
  text: getCount
- name: local.scope
  line: 22
  column: 35
  text: "{\n        return count\n    }"
- name: local.reference
  line: 23
  column: 16
  text: count
- name: local.scope
  line: 27
  column: 1
  text: "main() {\n    let instance = MainClass(\"World\")\n    println(instance.greet())\n    println(\"Total instances: ${MainClass.getCount()}\")\n}"
- name: local.scope
  line: 27
  column: 8
  text: "{\n    let instance = MainClass(\"World\")\n    println(instance.greet())\n    println(\"Total instances: ${MainClass.getCount()}\")\n}"
- name: local.definition
  line: 28
  column: 9
  text: instance
- name: local.reference
  line: 28
  column: 20
  text: MainClass
- name: local.reference
  line: 29
  column: 5
  text: println
- name: local.reference
  line: 29
  column: 13
  text: instance
- name: local.reference
  line: 29
  column: 22
  text: greet
- name: local.reference
  line: 30
  column: 5
  text: println
- name: local.reference
  line: 30
  column: 33
  text: MainClass
- name: local.reference
  line: 30
  column: 43
  text: getCount
- name: local.scope
  line: 33
  column: 1
  text: "func helper(): Bool {\n    return true\n}"
- name: local.definition
  line: 33
  column: 6
  text: helper
- name: local.scope
  line: 33
  column: 21
  text: "{\n    return true\n}"
- name: local.reference
  line: 34
  column: 12
  text: "true"
- name: local.scope
  line: 37
  column: 1
  text: "struct Point {\n    var x: Float64\n    var y: Float64\n\n    public init(x: Float64, y: Float64) {\n        this.x = x\n        this.y = y\n    }\n\n    public func distance(): Float64 {\n        return (x ** 2.0 + y ** 2.0) ** 0.5\n    }\n\n    mut func translate(dx: Float64, dy: Float64): Unit {\n        x += dx\n        y += dy\n    }\n}"
- name: local.definition
  line: 37
  column: 8
  text: Point
- name: local.definition
  line: 38
  column: 9
  text: x
- name: local.definition
  line: 39
  column: 9
  text: y
- name: local.scope
  line: 41
  column: 5
  text: "public init(x: Float64, y: Float64) {\n        this.x = x\n        this.y = y\n    }"
- name: local.definition
  line: 41
  column: 17
  text: x
- name: local.reference
  line: 41
  column: 17
  text: x
- name: local.definition
  line: 41
  column: 29
  text: y
- name: local.reference
  line: 41
  column: 29
  text: y
- name: local.scope
  line: 41
  column: 41
  text: "{\n        this.x = x\n        this.y = y\n    }"
- name: local.reference
  line: 42
  column: 14
  text: x
- name: local.reference
  line: 42
  column: 18
  text: x
- name: local.reference
  line: 43
  column: 14
  text: y
- name: local.reference
  line: 43
  column: 18
  text: y
- name: local.scope
  line: 46
  column: 5
  text: "public func distance(): Float64 {\n        return (x ** 2.0 + y ** 2.0) ** 0.5\n    }"
- name: local.definition
  line: 46
  column: 17
  text: distance
- name: local.scope
  line: 46
  column: 37
  text: "{\n        return (x ** 2.0 + y ** 2.0) ** 0.5\n    }"
- name: local.reference
  line: 47
  column: 17
  text: x
- name: local.reference
  line: 47
  column: 28
  text: y
- name: local.scope
  line: 50
  column: 5
  text: "mut func translate(dx: Float64, dy: Float64): Unit {\n        x += dx\n        y += dy\n    }"
- name: local.definition
  line: 50
  column: 14
  text: translate
- name: local.definition
  line: 50
  column: 24
  text: dx
- name: local.reference
  line: 50
  column: 24
  text: dx
- name: local.definition
  line: 50
  column: 37
  text: dy
- name: local.reference
  line: 50
  column: 37
  text: dy
- name: local.scope
  line: 50
  column: 56
  text: "{\n        x += dx\n        y += dy\n    }"
- name: local.reference
  line: 51
  column: 9
  text: x
- name: local.reference
  line: 51
  column: 14
  text: dx
- name: local.reference
  line: 52
  column: 9
  text: y
- name: local.reference
  line: 52
  column: 14
  text: dy
- name: local.scope
  line: 56
  column: 1
  text: "interface Drawable {\n    func draw(): Unit\n}"
- name: local.definition
  line: 56
  column: 11
  text: Drawable
- name: local.scope
  line: 57
  column: 5
  text: "func draw(): Unit"
- name: local.definition
  line: 57
  column: 10
  text: draw
- name: local.scope
  line: 60
  column: 1
  text: "enum Color {\n    | Red\n    | Green\n    | Blue\n    | Custom(Float64, Float64, Float64)\n}"
- name: local.definition
  line: 60
  column: 6
  text: Color
- name: local.reference
  line: 61
  column: 7
  text: Red
- name: local.reference
  line: 62
  column: 7
  text: Green
- name: local.reference
  line: 63
  column: 7
  text: Blue
- name: local.reference
  line: 64
  column: 7
  text: Custom
- name: local.scope
  line: 67
  column: 1
  text: "extend Point <: Drawable {\n    public func draw(): Unit {\n        println(\"Point at (${x}, ${y})\")\n    }\n}"
- name: local.reference
  line: 67
  column: 8
  text: Point
- name: local.reference
  line: 67
  column: 17
  text: Drawable
- name: local.scope
  line: 68
  column: 5
  text: "public func draw(): Unit {\n        println(\"Point at (${x}, ${y})\")\n    }"
- name: local.definition
  line: 68
  column: 17
  text: draw
- name: local.scope
  line: 68
  column: 30
  text: "{\n        println(\"Point at (${x}, ${y})\")\n    }"
- name: local.reference
  line: 69
  column: 9
  text: println
- name: local.reference
  line: 69
  column: 30
  text: x
- name: local.reference
  line: 69
  column: 36
  text: y
- name: local.scope
  line: 73
  column: 1
  text: "class Circle <: Point {\n    var radius: Float64\n\n    public init(x: Float64, y: Float64, radius: Float64) {\n        super.init(x, y)\n        this.radius = radius\n    }\n\n    public override func distance(): Float64 {\n        return radius\n    }\n}"
- name: local.definition
  line: 73
  column: 7
  text: Circle
- name: local.reference
  line: 73
  column: 17
  text: Point
- name: local.definition
  line: 74
  column: 9
  text: radius
- name: local.scope
  line: 76
  column: 5
  text: "public init(x: Float64, y: Float64, radius: Float64) {\n        super.init(x, y)\n        this.radius = radius\n    }"
- name: local.definition
  line: 76
  column: 17
  text: x
- name: local.reference
  line: 76
  column: 17
  text: x
- name: local.definition
  line: 76
  column: 29
  text: y
- name: local.reference
  line: 76
  column: 29
  text: y
- name: local.definition
  line: 76
  column: 41
  text: radius
- name: local.reference
  line: 76
  column: 41
  text: radius
- name: local.scope
  line: 76
  column: 58
  text: "{\n        super.init(x, y)\n        this.radius = radius\n    }"
- name: local.reference
  line: 77
  column: 15
  text: init
- name: local.reference
  line: 77
  column: 20
  text: x
- name: local.reference
  line: 77
  column: 23
  text: y
- name: local.reference
  line: 78
  column: 14
  text: radius
- name: local.reference
  line: 78
  column: 23
  text: radius
- name: local.scope
  line: 81
  column: 5
  text: "public override func distance(): Float64 {\n        return radius\n    }"
- name: local.definition
  line: 81
  column: 26
  text: distance
- name: local.scope
  line: 81
  column: 46
  text: "{\n        return radius\n    }"
- name: local.reference
  line: 82
  column: 16
  text: radius
