tests/languages/cangjie/snapshots/runnables_test.snap
---
source: tests/support/mod.rs
assertion_line: 81
expression: captures
---
- name: run
  line: 6
  column: 7
  text: Calculator
- name: cangjie_class_name
  line: 6
  column: 7
  text: Calculator
- name: run
  line: 7
  column: 17
  text: add
- name: cangjie_test_name
  line: 7
  column: 17
  text: add
- name: run
  line: 11
  column: 17
  text: subtract
- name: cangjie_test_name
  line: 11
  column: 17
  text: subtract
- name: run
  line: 15
  column: 17
  text: multiply
- name: cangjie_test_name
  line: 15
  column: 17
  text: multiply
- name: run
  line: 19
  column: 17
  text: divide
- name: cangjie_test_name
  line: 19
  column: 17
  text: divide
- name: run
  line: 24
  column: 7
  text: CalculatorTest
- name: cangjie_class_name
  line: 24
  column: 7
  text: CalculatorTest
- name: run
  line: 32
  column: 17
  text: testAdd
- name: cangjie_test_name
  line: 32
  column: 17
  text: testAdd
- name: run
  line: 38
  column: 17
  text: testSubtract
- name: cangjie_test_name
  line: 38
  column: 17
  text: testSubtract
- name: run
  line: 44
  column: 17
  text: testMultiply
- name: cangjie_test_name
  line: 44
  column: 17
  text: testMultiply
- name: run
  line: 50
  column: 17
  text: testDivide
- name: cangjie_test_name
  line: 50
  column: 17
  text: testDivide
- name: run
  line: 57
  column: 7
  text: StringUtils
- name: cangjie_class_name
  line: 57
  column: 7
  text: StringUtils
- name: run
  line: 58
  column: 17
  text: reverse
- name: cangjie_test_name
  line: 58
  column: 17
  text: reverse
- name: run
  line: 66
  column: 17
  text: isBlank
- name: cangjie_test_name
  line: 66
  column: 17
  text: isBlank
